--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,3 @@
-{
-  "os": "linux",
-  "dist": "trusty",
-  "group": "stable",
-  ".result": "configured",
-  "node_js": [
-    "node"
-  ],
-  "language": "node_js"
-}
+language: node_js
+node_js:
+  - "7"
